creatio responsive for phone device

--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
 
         <div class="item cloth">
             <a href="HTML/shop.html" class="link_tienda">
-                <img src="ASSETS/mountain_shirt.png" alt="emm" width="250px" height="250px">
+                <img src="ASSETS/mountain_shirt.png" alt="emm" width="100%" height="100%">
             </a>
         </div>
         <div class="item bike">
             <a href="HTML/shop.html" class="link_tienda">
-                <img src="ASSETS/trek_1.webp" alt="trek bike" width="500px" height="300px">
+                <img src="ASSETS/trek_1.webp" alt="trek bike" width="100%" height="100%">
             </a>
         </div>
         <div class="item biketwo">
             <a href="HTML/shop.html" class="link_tienda">
-                <img src="ASSETS/Haro_Downtown_26.webp" alt="haro bike" width="500px" height="250px">
+                <img src="ASSETS/Haro_Downtown_26.webp" alt="haro bike" width="100%" height="100%">
             </a>
         </div>
         <div class="item helmet">
             <a href="HTML/shop.html#helmet" class="link_tienda">
-                <img src="ASSETS/ixs_helmet.png" alt="helmet ixs" width="250px" height="245px">
+                <img src="ASSETS/ixs_helmet.png" alt="helmet ixs" width="100%" height="100%">
             </a>
         </div>
         <div class="item panoram">
-            <img src="ASSETS/CC.jpg" alt="" width="764px" height="244px">
+            <img src="ASSETS/CC.jpg" alt="" width="100%" height="100%">
         </div>
 
     </section>
